# pharmacy

./: .gitignore  README.md  hooks.py  license.txt  patches.txt  pyproject.toml
patches/v0_0/: sync_customer_profile_identity_refactor.py
pharmacy/: CHANGELOG.md  auth_hooks.py  hooks.py
pharmacy/api/mobile/: README.md  __init__.py  address.py  auth.py  catalog.py  order.py  payment.py  prescription.py  profile.py  test_auth.py
pharmacy/doctype/app_order/: app_order.js  app_order.json  app_order.py  test_app_order.py
pharmacy/doctype/app_order_item/: app_order_item.py
pharmacy/doctype/customer_profile/: test_customer_profile.py
pharmacy/doctype/health_reminder/: health_reminder.json  test_health_reminder.py
pharmacy/doctype/prescription/: prescription.json  prescription.py  test_prescription.py
pharmacy/doctype/prescription_item/: prescription_item.json  prescription_item.py
pharmacy/doctype/prescription_validation_log/: prescription_validation_log.py
pharmacy/services/: auth_service.py  cart_service.py  catalog_service.py  checkout_service.py  mobile_app_user_service.py  mobile_checkout_helper_service.py  mobile_service.py  order_service.py  prescription_service.py  profile_service.py
pharmacy/setup/: custom_fields.py  standard_doctypes.py
pharmacy/utils/: mobile_auth.py
setup/: custom_fields.py  standard_doctypes.py
utils/: customer_profile.py
vendor-pharmacy/: .gitignore  ARCHITECTURE.md  README.md  STRUCTURE_PLAN.md  pyproject.toml
vendor-pharmacy/pharmacy/: DEVELOPMENT.md  MANIFEST.in  README.md  setup.py
(+68 files in other folders)
