[project]
name = "pharmacy"
authors = [
    { name = "Basically", email = "info@basically.app" }
]
description = "Pharmacy app for Basically on Frappe/ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=16.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
